--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/hoobank.svg" />
-    <m  eta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,15 +14,14 @@
     />
 
     <!-- custom stylesheets links-->
-    <link rel="stylesheet" href="src/Styles/custom_properties.css">
-    <link rel="stylesheet" href="src/Styles/index.css">
-    <link rel="stylesheet" href="src/Styles/reset.css">
+    <link rel="stylesheet" href="src/Styles/custom_properties.css" />
+    <link rel="stylesheet" href="src/Styles/index.css" />
+    <link rel="stylesheet" href="src/Styles/reset.css" />
 
     <title>HoopBank</title>
   </head>
   <body>
     <div id="root">
-
 
     </div>
     <script type="module" src="/src/main.jsx"></script>
