Fetures section completed

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
     <link rel="stylesheet" href="src/Styles/index.css" />
     <link rel="stylesheet" href="src/Styles/reset.css" />
 
-    <title>HoopBank</title> 
+    <title>HoopBank</title>
   </head>
   <body>
-    <div id="root">
-
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
